# FaceAlgorithm_050122

./: CMakeLists.txt  LICENSE  README.md  README_en.md
FaceAlgorithm/: CMakeLists.txt
FaceAlgorithm/face_alignment/: CMakeLists.txt  Face_Alignment.cpp  Face_Alignment.h  main.cpp
FaceAlgorithm/face_detect/: CMakeLists.txt  face_preprocess.cu  face_preprocess.h
FaceAlgorithm/face_detect_yolov5face/: detector_yolov5face.cpp  detector_yolov5face.h  yolov5face_preprocess.cu  yolov5face_preprocess.h
FaceAlgorithm/face_detect_yolov7face/: detector_yolov7face.cpp  detector_yolov7face.h  yolov7face_postprocess.cu  yolov7face_postprocess.h  yolov7face_preprocess.cu  yolov7face_preprocess.h
FaceAlgorithm/face_detect_yolov8face/: detector_yolov8face.cpp  detector_yolov8face.h  yolov8face_postprocess.cu  yolov8face_postprocess.h  yolov8face_preprocess.cu  yolov8face_preprocess.h
FaceAlgorithm/face_recognition/: CMakeLists.txt  README.md  gen_wts.py  logging.h  prelu.cu  prelu.h
FaceAlgorithm/gender_age_recognition/: CMakeLists.txt
FaceAlgorithm/lib/: FaceRecognition.cpp  aligner.cpp  aligner.h  detector.cpp  detector.h  recognition.cpp  recognition.h
FaceAlgorithm/mask_recognition/: CMakeLists.txt
FaceAlgorithm/silent_face_anti_spoofing/: CMakeLists.txt
FaceAlgorithm_Test/: aligenment.txt  b.txt  main.cpp  testimg.txt
common/: ONNX2TRT.cpp  ONNX2TRT.h
include/: DataTypes_Face.h  FaceRecognition.h
include/Eigen/: .hg_archival.txt  .hgtags
include/Eigen/cmake/: EigenTesting.cmake
include/Eigen/doc/: CMakeLists.txt
include/Eigen/test/: CMakeLists.txt  (+4 more)
